# basic-rust-test

./: Cargo.toml  README.md  todo.txt
src/: main.rs  tests.rs  time_lib.rs
src/cgrandom/engine/: cgcsprng1.rs  engine.rs  mod.rs  mt19937.rs
src/cgrandom/engines/: cgcsprng1.rs  engine.rs  mod.rs  mt19937.rs  non_random.rs
src/cgrandom/generators/: cgcsprng1.rs  mt19937.rs  non_random.rs
src/libs/: debug_funcs.rs  mod.rs  time_fixed_prec.rs  unwrap_macros.rs
src/libs/cgrandom/generators/: cgcsprng1.rs  generator.rs  mod.rs  mt19937.rs  non_random.rs
src/main_modules/: errors.rs  large_prints.rs  mod.rs
src/main_modules/commands/: current_time.rs  fixed_prec_parse_test.rs  mod.rs  rng_simple.rs  sleep.rs
src/tests/: cgcsprng.rs  fixed_prec.rs  mod.rs  mt19937.rs  non_random.rs  sha3.rs
src/tests/libs/: mod.rs  time_fixed_prec.rs
src/tests/libs/cgrandom/: cgcsprng.rs  mod.rs
