[package]
name = 'basic-rust-test'
version = '1.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmap = '1.1.2'
chrono = '0.4.26'
chrono-tz = '0.8.3'
hex = '0.4.3'
hex-literal = '0.4.1'
iana-time-zone = '0.1.57'
num-traits = '0.2.16'
sha3 = '0.10.8'
substring = '1.4.5'

[profile.release]
opt-level = 3
lto = true           # use link time optimization
codegen-units = 1    # singlethreaded allows for more optimizations
#panic = 'abort'     # do not make stacktrace on panic
#strip = true        # strip symbols from binary on mac or linux

[profile.release-minsize]
inherits = 'release'
opt-level = 'z'      # optimize for size only, and skip vectorization ('s' for allowing vectorization)
lto = true           # use link time optimization
codegen-units = 1    # singlethreaded allows for more optimizations
panic = 'abort'      # do not make stacktrace on panic
strip = true         # strip symbols from binary on mac or linux
